<resources>
    <string name="app_name">Let\'s Plant</string>
    <string name="app_title">Let\'s Plant</string>
    <string name="sign_button">Sign In</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="edit_text_password">Enter password</string>
    <string name="edit_text_username">Enter username</string>
    <string name="text_view_sign">Sign Up</string>
    <string name="or">Or</string>
    <string name="edit_text_email">Enter email</string>
    <string name="edit_text_confirm_password">Confirm password</string>
    <string name="text_view_sign_in">Sign In</string>
    <string name="text_view_back_to">Back to&#160;</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_explore_fragment">Hello explore fragment</string>
    <string name="hello_plants_fragment">Hello plants fragment</string>
    <string name="hello_users_fragment">No users yet!</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_feed_fragment">No posts yet!</string>
    <string name="enter_name">Enter name</string>
    <string name="plant_name">Plant name</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_location">Location</string>
    <string name="your_phone_number">Phone</string>
    <string name="your_username">Username</string>
    <string name="your_email">Email</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>