<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:rotation="55"
        android:src="@drawable/ic_planet_earth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/app_title"
        android:textColor="#E5E5E5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/usernameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_layout"
        android:weightSum="6">

        <ImageView
            android:id="@+id/usernameImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:hint="@string/edit_text_username"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:textColor="#E5E5E5"
            android:textColorHint="#808080"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_layout"
        android:visibility="gone"
        android:weightSum="6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_email" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="#E5E5E5"
            android:textColorHint="#808080"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_layout"
        android:weightSum="6">

        <ImageView
            android:id="@+id/passwordImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="#E5E5E5"
            android:textColorHint="#808080"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/hideImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="showHidePass"
            android:focusable="true"
            android:src="@drawable/ic_hide" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmPasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_layout"
        android:visibility="gone"
        android:weightSum="6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:src="@drawable/ic_password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:hint="@string/edit_text_confirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="#E5E5E5"
            android:textColorHint="#808080"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgetPasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:weightSum="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5">

        </TextView>

        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password_text"
            android:textAlignment="viewEnd"
            android:textColor="#3399FB"
            android:textSize="8sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@null"
        android:text="@string/sign_button"
        android:textAllCaps="false"
        android:onClick="onSignButtonPress"
        android:textColor="#E5E5E5"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/orLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#808080" />

        <TextView
            android:id="@+id/orTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/or"
            android:textColor="#808080" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#808080" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/backToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_back_to"
            android:textColor="#808080"
            android:visibility="gone" />

        <TextView
            android:id="@+id/signTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="5dp"
            android:paddingEnd="5dp"
            android:text="@string/text_view_sign"
            android:textColor="#3399FB" />
    </LinearLayout>

</LinearLayout>